fix overflow bug on mobile

--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ body {
 }
 
 h1 {
-  font-size:5em;
+  font-size:4.7em;
   font-family: 'Montserrat';
 }
 
@@ -89,7 +89,7 @@ h2 {
 
 p {
 	font-size: 1.1em;
-	line-height:1.3;
+	line-height:1.2;
 	color: #BFBFBF;
 }
 
